--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@
 			<h1>The Dilemma</h1>
 			<p>It's 1970 and you love mathematics, but haven't quite mastered the art of adding up small numbers. To help your claim as the next Einstein, you devise a plan to make a machine called the adder, in which you will fool and amaze people with your new found ability. But, where to start you ask?
 			</p>
-			<p>Like any good adder, before being able to add multiple bits, you started only being able to add two. Over in the chips directory, conviently you will find three files that need finishing. Start with <code>HalfAdder.js</code>. Once you think you've got it working, run:
+			<p>Like any good adder, before being able to add multiple bits, it starts only being able to add two bits. Over in the chips directory, conviently you will find three files that need finishing. Start with <code>HalfAdder.js</code>. Once you think you've got it working, run:
 			</p>
 			<code class="banner flex">
 				$ yarn run test:HalfAdder
@@ -18,7 +18,7 @@
 			<p>
 			Then move onto <code>FullAdder.js</code> <i>(hint you will need HalfAdder)</i> and finally <code>Add4.js</code>. Make sure to test your chip before starting the next.
 			</p>
-			<p>When you think you are ready to rock and roll, all there is left to do is to watch the adder do that arthimetic it does so damn well. Try picking your two favourite numbers less than 8 and see if it works! Groovy, though 14 + 4 is bit of a dilemma. Nevermind, 1972 isn't too far away.
+			<p>When you think you are ready to rock and roll, all there is left to do is to watch the adder do that arthimetic it does so damn well. Try picking your two favourite numbers less than 8 and see if it works! Groovy, though 14 + 4 is bit of a problem. Nevermind, 1972 isn't too far away.
 			</p>
 
 		</div>
